Added label for cloud infrastructure checkbox

--- a/registration (1).html
+++ b/registration (1).html
@@ -253,8 +253,8 @@
                                     <label for="ai-ml">AI & Machine Learning</label>
                                 </div>
                                 <div class="flex items-center space-x-2">
-                                    <input type="checkbox" class="h-4 w-4 text-brand-purple rounded">
-                                    <span>Cloud Infrastructure</span>
+                                    <input type="checkbox" id = "cloud" class="h-4 w-4 text-brand-purple rounded">
+                                    <label for = "cloud">Cloud Infrastructure</label>
                                 </div>
                                 <div class="flex items-center space-x-2">
                                     <input type="checkbox" id="security" class="h-4 w-4 text-brand-purple rounded">
