Added label for Standard Meal

--- a/registration (1).html
+++ b/registration (1).html
@@ -279,7 +279,7 @@
                                 <h4 class="text-xl font-medium mb-3">Dietary Needs</h4>
                                 <div class="flex items-start space-x-3">
                                     <input type="radio" name="diet" id="diet-standard" value="standard" class="mt-1 h-4 w-4 text-brand-purple">
-                                    <span>Standard Meal</span>
+                                    <label for = "diet-standard">Standard Meal</label>
                                 </div>
                                 <div class="flex items-start space-x-3">
                                     <input type="radio" name="diet" id="diet-vegan" value="vegan" class="mt-1 h-4 w-4 text-brand-purple">
