--- a/registration (1).html
+++ b/registration (1).html
@@ -184,7 +184,7 @@
         <div class="max-w-6xl mx-auto px-4 sm-px-6 lg-px-8 flex justify-between items-center">
             <h2 class="text-4xl font-extrabold tracking-tight">2025 Registration</h2>
             
-            <button class="bg-indigo-600 hover-bg-indigo-700 p-2 rounded-full shadow-md text-white" onclick="console.log('Close button clicked');"> Close
+            <button class="bg-indigo-600 hover-bg-indigo-700 p-2 rounded-full shadow-md text-white" onclick="console.log('Close button clicked');"> aria-label = "Close"
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                 </svg>
