--- a/registration (1).html
+++ b/registration (1).html
@@ -391,7 +391,7 @@
             </span>
         </div>
         
-        <a href="#top" style="display: block; height: 10px;"></a>
+        <a href="#top" style="display: block; height: 10px;">Back to top</a>
         
         <div class="flex flex-col space-y-2 mt-6">
             <h3 class="text-2xl font-semibold mb-2 text-brand-purple">Contact Us</h3>
