Removed style = form <button> so it doesnt overwrite the change on style.css file

--- a/registration (1).html
+++ b/registration (1).html
@@ -134,7 +134,7 @@
                                 <span style="color: #4b5563;">&#x270E;</span> 
                             </button>
                             
-                            <button class="bg-red-500 p-4 ml-4 rounded-lg shadow-md text-white" onclick="clearForm()" style="transition: background-color 0.2s;" onmouseover="this.style.backgroundColor='#dc2626'" onmouseout="this.style.backgroundColor='#ef4444'">
+                            <button class="bg-red-500 p-4 ml-4 rounded-lg shadow-md text-white" onclick="clearForm()">
                                 &#x2715; 
                             </button>
                         </div>
