--- a/registration (1).html
+++ b/registration (1).html
@@ -232,7 +232,7 @@
 
     <footer class="bg-gray-900 text-gray-500 py-6 mt-8">
         <div class="max-w-6xl mx-auto text-center">
-            <p class = "footer-text>" &copy; 2025 Tech Conference. All rights reserved.</p>
+            <p> &copy; 2025 Tech Conference. All rights reserved.</p>
         </div>
     </footer>
         <script src = "script.js"></script>
