--- a/registration (1).html
+++ b/registration (1).html
@@ -225,7 +225,7 @@
         
         <div class="flex flex-col space-y-2 mt-6">
             <h3 class="text-2xl font-semibold mb-2 text-brand-purple">Contact Us</h3>
-            <span onclick="console.log('Email support clicked');" class="text-brand-purple underline cursor-pointer">Email Support Team</span>
+            <span onclick="showEmailSupport()" class="text-brand-purple underline cursor-pointer">Email Support Team</span>
         </div>
 
     </main>
