--- a/registration (1).html
+++ b/registration (1).html
@@ -67,6 +67,7 @@
                             <h3 class="text-2xl font-semibold mb-6 text-brand-purple">2. Ticket & Tracks</h3>
                             
                             <div class="flex flex-col mb-4">
+                                <label for="ticket-type">Ticket Type</label>
                                 <select id="ticket-type" class="p-3 border border-gray-300 rounded-lg focus-ring-2 focus-ring-brand-purple">
                                     <option value="">-- Select Ticket Type --</option>
                                     <option value="standard">Standard Pass ($599)</option>
