Fixed orphaned label

--- a/registration (1).html
+++ b/registration (1).html
@@ -76,7 +76,7 @@
                                 </select>
                             </div>
                             
-                            <label class="mb-3 font-medium block required-field">Select up to 3 preferred tracks:</label>
+                            <p class="mb-3 font-medium block required-field">Select up to 3 preferred tracks:</p>
 
                             <div id="track-list" class="space-y-2 border border-gray-300 p-3 rounded-lg">
                                 <div class="flex items-center space-x-2">
