--- a/registration (1).html
+++ b/registration (1).html
@@ -157,7 +157,7 @@
                         <img src="https://placehold.co/250x3/dddddd/dddddd" style="display: block; margin: 15px auto; width: 90%;" title="Divider">
                         
                         <p class="text-sm mt-3">
-                            For all terms and conditions, <a href="/terms" class="text-brand-purple underline font-bold">More Details</a>.
+                            For all terms and conditions, <a href="/terms" class="text-brand-purple underline font-bold">Read full terms and conditions</a>.
                         </p>
                     </section>
                     
