--- a/registration (1).html
+++ b/registration (1).html
@@ -215,7 +215,7 @@
             <h4 class="text-xl font-medium mb-3">Watch Last Year's Promo</h4>
             <iframe width="100%" height="150" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
             
-            <p class="text-sm mt-3 justified-text">This section provides a brief overview of the conference structure. The full schedule is available via the link above. We highly recommend reviewing this information to ensure your session choices align with your professional development goals.</p>
+            <p class="text-sm mt-3">This section provides a brief overview of the conference structure. The full schedule is available via the link above. We highly recommend reviewing this information to ensure your session choices align with your professional development goals.</p>
             
             <span class="text-sm font-bold text-brand-purple cursor-pointer mt-4 block" onclick="console.log('Previous section clicked');">
                 &lt; Previous Section
