--- a/registration (1).html
+++ b/registration (1).html
@@ -185,7 +185,8 @@
             </tr>
         </tbody>
     </table>
-
+    
+    <div id="info"></div>
     <main class="max-w-6xl mx-auto px-4 sm-px-6 lg-px-8 pt-0">
 
         <div class="bg-white p-6 rounded-xl shadow-lg mt-6 border-l-8 border-brand-purple">
