--- a/registration (1).html
+++ b/registration (1).html
@@ -189,6 +189,9 @@
     <div id="info"></div>
     <main class="max-w-6xl mx-auto px-4 sm-px-6 lg-px-8 pt-0">
 
+        <div id="schedule"></div>
+        
+
         <div class="bg-white p-6 rounded-xl shadow-lg mt-6 border-l-8 border-brand-purple">
             <h3 class="text-2xl font-semibold mb-4 text-brand-purple">Conference Schedule Summary</h3>
             
