--- a/registration (1).html
+++ b/registration (1).html
@@ -171,6 +171,7 @@
                             <p class="text-lg font-medium mt-2">J.D. Smith, CEO TechCorp</p>
                         </div>
                     </section>
+                    <div id="speaker-bio"></div>
                     
                     <section id="sponsor-info" class="bg-white p-6 rounded-xl shadow-lg">
                         <h3 class="text-2xl font-semibold mb-4 text-brand-purple">Our Sponsors</h3>
